# android_hardware_qcom_camera

./: Android.mk  Makefile.am  QCameraHAL.cpp  QCameraHWI.cpp  QCameraHWI.h  QCameraHWI_Display.cpp  QCameraHWI_Display.h  QCameraHWI_Mem.cpp  QCameraHWI_Mem.h  QCameraHWI_Parm.cpp  QCameraHWI_Preview.cpp  QCameraHWI_Preview_7x27A.cpp  QCameraHWI_Rdi.cpp  QCameraHWI_Record.cpp  QCameraHWI_Record_7x27A.cpp  QCameraHWI_Still.cpp  QCameraParameters.cpp  QCameraParameters.h  QCameraStream.cpp  QCameraStream.h  QCamera_Intf.h  QualcommCamera.cpp  QualcommCamera2.cpp  QualcommCameraHardware.cpp  QualcommCameraHardware.h  camera-hal.pc.in  configure.ac  mm_camera.c  mm_camera.h  mm_camera_channel.c  mm_camera_dbg.h  mm_camera_helper.c  mm_camera_interface2.c  mm_camera_interface2.h  mm_camera_notify.c  mm_camera_poll_thread.c  mm_camera_stream.c  mm_jpeg_encoder.c  mm_omx_jpeg_encoder.c  mm_omx_jpeg_encoder.h
QCamera/HAL/core/: Android.mk
QCamera/HAL/core/inc/: QCameraHWI.h  QCameraStream.h  QualcommUsbCamera.h
QCamera/HAL/core/src/: QCameraHAL.cpp  QCameraHWI.cpp  QCameraHWI_Parm.cpp  QCameraHWI_Preview.cpp  QCameraHWI_Rdi.cpp  QCameraHWI_Record.cpp  QCameraHWI_Still.cpp  QCameraParameters.cpp  QCameraStream.cpp  QualcommUsbCamera.cpp
QCamera/HAL/usbcamcore/inc/: QCameraMjpegDecode.h  QCameraUsbParm.h  QCameraUsbPriv.h
QCamera/HAL/usbcamcore/src/: QCameraLibJpegDecode.cpp  QCameraMjpegDecode.cpp  QCameraUsbParm.cpp  QualcommUsbCamera.cpp
QCamera/HAL/wrapper/: QualcommCamera.cpp
QCamera/stack/mm-camera-interface/: Android.mk
QCamera/stack/mm-camera-interface/inc/: mm_camera.h  mm_camera_dbg.h  mm_camera_interface.h
QCamera/stack/mm-camera-interface/src/: mm_camera.c  mm_camera_channel.c  mm_camera_interface.c  mm_camera_stream.c
QCamera/stack/mm-camera-test/inc/: mm_qcamera_app.h
QCamera/stack/mm-camera-test/src/: mm_qcamera_app.c
QCamera/stack/mm-jpeg-interface/: Android.mk
QCamera/stack/mm-jpeg-interface/inc/: mm_jpeg_interface.h  omx_debug.h
QCamera/stack/mm-jpeg-interface/src/: mm_jpeg.c
QCamera2/: Android.mk  QCamera2Factory.cpp  QCamera2Hal.cpp
QCamera2/HAL/: Android.mk  CameraParameters.cpp  CameraParameters.h  Makefile.am  QCamera2HWI.cpp  QCamera2HWI.h  QCamera2HWICallbacks.cpp  QCamera2Hal.cpp  QCameraChannel.cpp  QCameraChannel.h  QCameraMem.cpp  QCameraMem.h  QCameraMuxer.cpp  QCameraParameters.cpp  QCameraParameters.h  QCameraPostProc.cpp  QCameraPostProc.h  QCameraStateMachine.cpp  QCameraStateMachine.h  QCameraStream.cpp  QCameraStream.h  QCameraThermalAdapter.cpp
QCamera2/HAL/test/: Android.mk  CameraKernelLuaBind.c  Makefile.am  QCamera2HalLuaBind.c  qcamera_test.cpp  qcamera_test.h
QCamera2/HAL/wrapper/: QualcommCamera.cpp  QualcommCamera.h
QCamera2/HAL3/: QCamera3Channel.cpp  QCamera3Channel.h  QCamera3HALHeader.h  QCamera3HWI.cpp  QCamera3HWI.h  QCamera3Mem.cpp  QCamera3Mem.h  QCamera3PostProc.cpp  QCamera3PostProc.h  QCamera3Stream.cpp  QCamera3Stream.h  QCamera3VendorTags.cpp  QCamera3VendorTags.h
QCamera2/stack/: Makefile.am
QCamera2/stack/common/: cam_intf.h  cam_list.h  cam_queue.h  cam_semaphore.h  cam_types.h  mm_camera_interface.h  mm_jpeg_interface.h
QCamera2/stack/mm-camera-interface/: Android.mk  Makefile.am
QCamera2/stack/mm-camera-interface/inc/: android_adapter.h  mm_camera.h  mm_camera_dbg.h
QCamera2/stack/mm-camera-interface/src/: cam_intf.c  mm_camera.c  mm_camera_channel.c  mm_camera_interface.c  mm_camera_sock.c  mm_camera_stream.c  mm_camera_thread.c
QCamera2/stack/mm-camera-test/: Android.mk  Makefile.am
QCamera2/stack/mm-camera-test/inc/: mm_qcamera_app.h  mm_qcamera_dbg.h  mm_qcamera_main_menu.h  mm_qcamera_socket.h
QCamera2/stack/mm-camera-test/src/: mm_qcamera_app.c  mm_qcamera_display.c  mm_qcamera_dual_test.c  mm_qcamera_main_menu.c  mm_qcamera_preview.c  mm_qcamera_rdi.c  mm_qcamera_reprocess.c  mm_qcamera_snapshot.c  mm_qcamera_socket.c  mm_qcamera_unit_test.c  mm_qcamera_video.c
QCamera2/stack/mm-jpeg-interface/: Android.mk  Makefile.am
QCamera2/stack/mm-jpeg-interface/inc/: mm_jpeg.h  mm_jpeg_dbg.h  mm_jpeg_ionbuf.h
QCamera2/stack/mm-jpeg-interface/src/: mm_jpeg.c  mm_jpeg_exif.c  mm_jpeg_interface.c  mm_jpeg_ionbuf.c  mm_jpeg_queue.c  mm_jpegdec.c
QCamera2/stack/mm-jpeg-interface/test/: Android.mk  mm_jpeg_test.c
QCamera2/util/: Makefile.am  QCameraCmdThread.cpp  QCameraQueue.cpp  QCameraQueue.h
hardware/qcom/camera/QCamera2/HAL/: Android.mk  QCamera2HWI.cpp  QCamera2HWI.h  QCamera2HWICallbacks.cpp  QCameraParameters.cpp  QCameraParameters.h  QCameraPostProc.cpp
hardware/qcom/camera/QCamera2/HAL/tsMakeuplib/include/: ts_makeup_engine.h
libcamera/: Makefile.am
libcamera/inc/: camera.h  camera_parameters.h
libcamera/src/: camera_memory.cpp  camera_memory.h  camera_parameters.cpp  qcamera2.cpp  qcamera2.h  qcamera_extensions.h
libcamera/test/: camera_test.cpp
mm-camera-interface/: Android.mk  mm_camera.c  mm_camera.h  mm_camera_channel.c  mm_camera_dbg.h  mm_camera_helper.c  mm_camera_interface2.c  mm_camera_interface2.h  mm_camera_notify.c  mm_camera_poll_thread.c  mm_camera_sock.c  mm_camera_stream.c  mm_jpeg_encoder.c  mm_omx_jpeg_encoder.c  mm_omx_jpeg_encoder.h
mm-image-codec/: Makefile.am  configure.ac
mm-image-codec/qexif/: qexif.h
mm-image-codec/qomx_core/: QOMX_JpegExtensions.h  qomx_core.c  qomx_core.h
qcamlib/: Makefile.am  README.md
qcamlib/inc/: qcamlib.h
qcamlib/src/: qcam_log.h  qcamlib.c
qcamlib/test/: qcamlib_test.c
